# nelder_mead_with_eigen

./: CMakeLists.txt  Makefile  README.md  amoeba  amoeba_try.cpp  readMatrix.cpp  test.csv
